--- a/сss/style.css
+++ b/сss/style.css
@@ -7,8 +7,8 @@
 body{
     max-width: 960px;
     margin: 0 auto;
-    /* display: flex;
-    flex-wrap: wrap; */
+    display: flex;
+    flex-wrap: wrap;
 }
 header{
     display: flex;
@@ -25,6 +25,9 @@ header{
     height: 150px;
 }
 aside{
-    width: 40%;
-    float: left;
+    flex:0 1 40%;
+    
+}
+main{
+    flex: 1;
 }
