--- a/сss/style.css
+++ b/сss/style.css
@@ -3,31 +3,75 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html{
+    font-family: 'Lato', sans-serif;
+    color: #555;
+    font-weight: 500;
+    font-size: 20px;
+    background: white;
+}
+h1{
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 210%;
+    word-spacing: 4px;
+    letter-spacing: 1px;
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+h2{
+    font-size: 160%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+    color: white;
+    font-weight: 400;
+}
+h3{
+    border-bottom:1px solid #555;
+    padding-bottom: 4px;
+}
 body{
     max-width: 960px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    background: whitesmoke;
 }
 header{
-    display: flex;
     width: 100%;
+    text-align: center;
+    background: rgb(43, 43, 56);
+    margin-bottom: 20px;
+}
 
-}
-.photo{
-    flex: 0 1 45%;
-    /* border-radius: 50px; */
-       
-}
 .photo img{
     width: auto;
     height: 150px;
+    border-radius: 45%;
+    
 }
 aside{
     flex:0 1 40%;
+    margin-left: 2%;
     
 }
 main{
-    flex: 1;
+    flex:1;
+    margin-left: 15px;
+
+}
+li{
+    margin-left: 20px;
+    padding-bottom: 4px;
+}
+main p{
+    max-width: 80%;
+    text-align: justify;
+}
+a{
+    text-decoration: none;
 }
