--- a/сss/style.css
+++ b/сss/style.css
@@ -10,8 +10,8 @@ html{
     font-size: 20px;
     background: white;
 }
+
 h1{
-    margin-top: 0;
     margin-bottom: 20px;
     font-size: 210%;
     word-spacing: 4px;
@@ -25,7 +25,6 @@ h2{
     font-size: 160%;
     word-spacing: 2px;
     text-align: center;
-    margin-bottom: 20px;
     letter-spacing: 1px;
     color: white;
     font-weight: 400;
@@ -33,43 +32,47 @@ h2{
 h3{
     border-bottom:1px solid #555;
     padding-bottom: 4px;
+    padding-top: 10px;
+    margin-bottom: 7px;
 }
 body{
-    max-width: 960px;
+    max-width: 1024px;
     margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
     background: whitesmoke;
 }
 header{
     width: 100%;
     text-align: center;
     background: rgb(43, 43, 56);
-    margin-bottom: 20px;
 }
 
 .photo img{
     width: auto;
-    height: 150px;
-    border-radius: 45%;
-    
+    height: 200px;
+    border-radius: 60%;   
 }
-aside{
-    flex:0 1 40%;
-    margin-left: 2%;
-    
-}
-main{
-    flex:1;
-    margin-left: 15px;
 
+main{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+.left{
+    flex: 0 1 35%;
+    margin: 2%;
+    
+}
+.right{
+    flex:1;
+    margin: 2%;
+    
 }
 li{
     margin-left: 20px;
     padding-bottom: 4px;
 }
 main p{
-    max-width: 80%;
+    /* max-width: 90%; */
     text-align: justify;
 }
 a{
