--- a/сss/style.css
+++ b/сss/style.css
@@ -93,8 +93,8 @@ a{ text-decoration: none;}
 footer{
     display: flex;
     flex-direction: row;
+    align-items: center;
     padding: 10px 0;
-    justify-content: center;
     background: rgb(43, 43, 56);
 }
 .footer-logo{
@@ -106,7 +106,19 @@ footer{
 .footer-logo:hover,
 .footer-logo:active{ opacity: 0.5;}
 
+.logo-git{
+    flex: 0 1 45%;
+    text-align: right;
+    margin-right: 10px;
+}
+
+.logo-rs{
+    flex: 0 1 25%;
+}
+
 .year{
     color: white;
-    font-size: 40px;   
+    font-size: 40px;
+    flex: 1;
+    text-align: right;   
 }
